# renov_local

./: BD.ipynb  bdnd.ipynb  create_files.ipynb  dpe.ipynb  insights.ipynb  model.ipynb  multivariate_pred_tremi.ipynb  pred_dpe.ipynb  pred_tremi.ipynb  pred_tremi_v1.ipynb  pred_tremi_v2.ipynb  pyproject.toml  readme.md  to_categorical.ipynb
Import files/: Open files.py
ML/: balanced.ipynb  insights.ipynb  multivariate_pred_tremi.ipynb  overfit.ipynb  pred_dpe.ipynb  pred_renov.ipynb  pred_tremi_v2.ipynb  show_old_results_dpe.ipynb  show_old_results_surface.ipynb  to_categorical.ipynb
ML/lib/: merge.py  prepare_data.py  show.py  train.py  useful.py
lib/: all.py  merge.py  prepare_data.py  show.py  train.py  usefull.py
notebooks/: BD.ipynb  balanced.ipynb  dpe_compare.ipynb  insights.ipynb  multivariate_pred_tremi.ipynb  pred_dpe.ipynb  pred_renov.ipynb  pred_tremi_v2.ipynb  show_old_results.ipynb  show_old_results_dpe.ipynb  show_old_results_surface.ipynb  to_categorical.ipynb
training/: dico.csv  pred_renov.csv  pred_tremi.csv  pred_tremi_full.csv  pred_tremi_v2.csv  prediction_dpe.csv
training/dpe/: .part-00000-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00001-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00002-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00003-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00004-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00005-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  .part-00006-7076da90-fb10-444e-b430-ab21ddaf6ae9-c000.csv.crc  (+13 more)
