[tool.poetry]
name = "renovation"
version = "0.1.0"
description = "functions to run notebooks properly"
authors = ["Axel Rocheteau"]
readme = "README.md"
repository = "https://github.com/axrocheteau/renovation"
packages = [
    { include = "my_package", from = "lib" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scipy = "^1.11.0"
xgboost = "^1.7.6"
pandas = "^1.5.3"
pyspark = "^3.4.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
